--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">15011027_DijitalNotDefteri</string>
     <string name="notlar_baslik">NOTLAR</string>
     <string name="yeni_not_button">YENİ NOT</string>
+    <string name="baslik">Başlık</string>
+    <string name="kaydet">Kaydet</string>
+    <string name="metin">Metin</string>
 </resources>
