Not silme eklendi

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="baslik">Başlık</string>
     <string name="kaydet">Kaydet</string>
     <string name="metin">Metin</string>
+    <string name="sil">Sil</string>
 </resources>
